# pro-response-for-slackbot

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  index.html  pyproject.toml  requirements.txt
docs/: create_and_configure_slackbot.md  index.html  site.webmanifest
docs/brand/: make_assets.py
proresponse/: __init__.py  __main__.py  cli.py  config.py  core.py  ratelimit.py  sanitize.py  server.py  transforms.py
proresponse/providers/: __init__.py  anthropic_provider.py  base.py  openai_compatible.py  openai_provider.py  registry.py
proresponse/slack/: __init__.py  app.py  blocks.py  store.py
tests/: fakes.py  test_blocks.py  test_cli.py  test_config.py  test_core.py  test_ratelimit.py  test_registry.py  test_sanitize.py  test_server.py  test_slack_app.py  test_store.py  test_transforms.py
