[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pro-response"
version = "2.0.0"
description = "An AI writing assistant for Slack — rewrite, refine, and reformat team messages with modern LLMs."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Stephen M Abbott" }]
keywords = ["slack", "slackbot", "openai", "anthropic", "llm", "writing", "gpt", "claude"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "openai>=1.40",
    "slack_bolt>=1.18",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
]
all = ["anthropic>=0.40"]

[project.urls]
Homepage = "https://github.com/stevologic/pro-response"
Documentation = "https://stevologic.github.io/pro-response/"
Source = "https://github.com/stevologic/pro-response"
Issues = "https://github.com/stevologic/pro-response/issues"

[project.scripts]
proresponse = "proresponse.cli:main"
proresponse-slack = "proresponse.slack.app:main"
proresponse-api = "proresponse.server:main"

[tool.setuptools.packages.find]
include = ["proresponse*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]
